Project

General

Profile

Actions

Bug #22608

closed

Missing TrackedOp events "header_read", "throttled", "all_read" and "all_read"

Added by Xuehan Xu over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Recently, when trying to locate some performance bottleneck, we opened the OpTracker. However, we found that events "header_read", "throttled", "all_read" and "all_read" are missing. After reading the source code, we believe that this is because the "tracking_start" method is invoked in create_request after the construction of TrackedOps.

Actions #1

Updated by Xuehan Xu over 6 years ago

I've just submitted a PR: https://github.com/ceph/ceph/pull/19828

Actions #2

Updated by Sage Weil over 6 years ago

  • Status changed from New to 12
Actions #3

Updated by Yuri Weinstein about 6 years ago

Xuehan Xu wrote:

I've just submitted a PR: https://github.com/ceph/ceph/pull/19828

merged

Actions #4

Updated by Nathan Cutler about 6 years ago

  • Status changed from 12 to Resolved
Actions

Also available in: Atom PDF